--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.geo_lokacijaograda.MainActivity"
     android:orientation="vertical"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="0dp">
+    android:paddingTop="0dp"
+    tools:context="com.geo_lokacijaograda.MainActivity">
 
 
     <LinearLayout
@@ -39,9 +39,10 @@
             android:textColor="@color/textColor"
             android:textSize="15dp" />
 
+
     </LinearLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
@@ -49,7 +50,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="122dp" />
+        android:layout_marginTop="170dp" />
 
 
     <android.support.constraint.ConstraintLayout
@@ -58,12 +59,13 @@
 
         <EditText
             android:id="@+id/upišiMjesto"
-            android:layout_width="235dp"
+            android:layout_width="225dp"
             android:layout_height="41dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:hint="Gdje želite ići"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -73,11 +75,12 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="87dp"
-            android:layout_height="46dp"
+            android:layout_width="78dp"
+            android:layout_height="44dp"
+            android:background="#525759"
             android:onClick="geoLocate"
             android:text="Traži"
-            android:textSize="14dp"
+            android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.905"
@@ -87,27 +90,30 @@
 
         <Button
             android:id="@+id/btnOK"
-            android:layout_width="87dp"
-            android:layout_height="46dp"
+            android:layout_width="78dp"
+            android:layout_height="44dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="28dp"
             android:layout_marginTop="8dp"
+            android:background="#525759"
             android:text="OK"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.135" />
+            app:layout_constraintVertical_bias="0.15" />
 
         <EditText
             android:id="@+id/etRadijus"
-            android:layout_width="235dp"
+            android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="Upišite radijus geo-ograde"
+            android:hint="Radijus geo-ograde"
+            android:textSize="17dp"
             android:inputType="number"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnOK"
@@ -115,6 +121,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.142" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Spremi geo-ogradu     "
+            android:textStyle="bold"
+            android:textColor="#ffc1cd"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.04"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.239" />
+
 
     </android.support.constraint.ConstraintLayout>
 
